# picshelf

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-ghcr.yml
src/picshelf/: __init__.py  server.py
src/picshelf/static/: app.js  index.html  style.css
tests/: test_server.py
