[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picshelf"
version = "0.1.1"
description = "Small local image server with a category gallery UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PicShelf contributors" }
]
keywords = ["image-server", "gallery", "docker", "homelab", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Multimedia :: Graphics",
]

[project.scripts]
picshelf = "picshelf.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
picshelf = ["static/*"]
